// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> snapshot renders the component with default props 1`] = `
<DocumentFragment>
  <input
    class="sc-AxjAm jmOayL"
    data-testid=""
    placeholder=""
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`<Input /> snapshot renders the component with defaultValue 1`] = `
<DocumentFragment>
  <input
    class="sc-AxjAm jmOayL"
    data-testid=""
    placeholder=""
    type="text"
    value="Text"
  />
</DocumentFragment>
`;
